# caos_scrapper

./: README.md  pyproject.toml
app/: fetch_to_csv.py  main.py  settings.py  upload_to_gsheets.py
