[tool.poetry]
name = "caos-poc"
version = "0.1.0"
description = ""
authors = ["bertek <81099969+albertoecf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
streamlit = "^1.36.0"
pydantic = "^2.8.2"
backoff = "^2.2.1"
gspread = "^6.1.2"
decouple = "^0.0.7"
oauth2client = "^4.1.3"


[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"